--- a/data2qrcode/src/main/resources/com/gladic/data2qrcode/primary.fxml
+++ b/data2qrcode/src/main/resources/com/gladic/data2qrcode/primary.fxml
@@ -33,6 +33,7 @@
 -->
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
@@ -43,21 +44,23 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="428.0" prefWidth="790.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gladic.data2qrcode.Controller">
+<VBox prefHeight="450.0" prefWidth="991.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gladic.data2qrcode.Controller">
   <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="389.0" prefWidth="448.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="480.0" prefWidth="992.0" VBox.vgrow="ALWAYS">
          <children>
-            <TextField fx:id="textfielddata" layoutX="82.0" layoutY="336.0" prefHeight="24.0" prefWidth="695.0" />
+            <TextField fx:id="textfielddata" layoutX="82.0" layoutY="336.0" prefHeight="24.0" prefWidth="904.0" />
             <Label alignment="CENTER" layoutY="330.0" prefHeight="36.0" prefWidth="80.0" text="Data" textAlignment="JUSTIFY" />
-            <BorderPane layoutX="11.0" layoutY="4.0" prefHeight="325.0" prefWidth="768.0">
+            <BorderPane layoutX="11.0" layoutY="4.0" prefHeight="325.0" prefWidth="972.0">
                <center>
                   <ImageView fx:id="userqrcode" fitHeight="281.0" fitWidth="377.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
                </center>
             </BorderPane>
-            <GridPane layoutX="28.0" layoutY="371.0" prefHeight="44.0" prefWidth="753.0">
+            <GridPane layoutX="28.0" layoutY="371.0" prefHeight="70.0" prefWidth="954.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
@@ -66,9 +69,11 @@
                 <RowConstraints maxHeight="23.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="qrcodesave" mnemonicParsing="false" onAction="#HandleSaveAction" prefHeight="44.0" prefWidth="293.0" text="Save" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button fx:id="qrcodegen" mnemonicParsing="false" onAction="#HandleConvertAction" prefHeight="44.0" prefWidth="376.0" text="Convert" GridPane.rowIndex="1" />
+                  <Button fx:id="qrcodesave" mnemonicParsing="false" onAction="#HandleSaveAction" prefHeight="129.0" prefWidth="239.0" text="Save" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="qrcodegen" mnemonicParsing="false" onAction="#HandleConvertAction" prefHeight="127.0" prefWidth="239.0" text="Convert" GridPane.rowIndex="1" />
                   <Button mnemonicParsing="false" onAction="#HandleRandomAction" prefHeight="92.0" prefWidth="344.0" text="Random" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <ComboBox fx:id="randomtype" prefHeight="102.0" prefWidth="273.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                  <TextField fx:id="lenghtofpassword" alignment="CENTER" prefHeight="132.0" prefWidth="185.0" promptText="12" text="12" GridPane.columnIndex="4" GridPane.rowIndex="1" />
                </children>
             </GridPane>
          </children>
